# mlops_capstone

./: .dockerignore  .gitignore  Dockerfile  README.md  dvc.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci_cd.yaml
docs/: conf.py
flask_app/: app.py
notebooks/: data.csv  exp.ipynb  exp2_bow_vs_tfidf.py  exp3_hp.py
src/data/: data_ingestion.py  data_preprocessing.py
src/features/: feature_engineering.py
src/logger/: __init__.py
src/model/: model_evaluation.py  register_model.py  train_model.py
