[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
version = "0.1.0"
description = "mlops capstone project"
authors = [{name = "Gaurav Chauhan"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiobotocore>=2.15.0",
    "aiohappyeyeballs==2.4.3",
    "aiohttp==3.10.10",
    "aiohttp-retry==2.8.3",
    "aioitertools==0.12.0",
    "aiosignal==1.3.1",
    "alembic==1.14.0",
    "amqp==5.3.1",
    "aniso8601==9.0.1",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.7.0",
    "appdirs==1.4.4",
    "asyncssh==2.18.0",
    "atpublic==5.0",
    "attrs==24.2.0",
    "awscli>=1.36.0",
    "backoff==2.2.1",
    "billiard==4.2.1",
    "blinker==1.9.0",
    "boto3==1.35.80",
    "botocore>=1.35.0",
    "cachetools==5.5.0",
    "celery==5.4.0",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "cloudpickle==3.1.0",
    "colorama==0.4.6",
    "commonmark==0.9.1",
    "configobj==5.0.9",
    "contourpy==1.3.1",
    "cryptography==44.0.0",
    "cycler==0.12.1",
    "dacite==1.8.1",
    "dagshub==0.3.34",
    "databricks-sdk==0.38.0",
    "dataclasses-json==0.6.7",
    "Deprecated==1.2.15",
    "dictdiffer==0.9.0",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "docker==7.1.0",
    "docutils==0.21.2",
    "dpath==2.2.0",
    "dulwich==0.22.6",
    "dvc==3.58.2",
    "dvc-data==3.16.9",
    "dvc-http==2.32.0",
    "dvc-objects==5.1.0",
    "dvc-render==1.0.2",
    "dvc-s3==3.2.0",
    "dvc-studio-client==0.21.0",
    "dvc-task==0.4.0",
    "entrypoints==0.4",
    "filelock==3.16.1",
    "Flask==3.1.0",
    "flatten-dict==0.4.2",
    "flufl.lock==8.1.0",
    "fonttools==4.55.3",
    "frozenlist==1.5.0",
    "fsspec==2024.12.0",
    "funcy==2.0",
    "fusepy==3.0.1",
    "gitdb==4.0.11",
    "GitPython==3.1.44",
    "google-auth==2.37.0",
    "gql==3.5.0",
    "grandalf==0.8",
    "graphene==3.4.3",
    "graphql-core==3.2.5",
    "graphql-relay==3.2.0",
    "greenlet==3.1.1",
    "gto==1.7.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "hydra-core==1.3.2",
    "idna==3.10",
    "importlib_metadata==8.5.0",
    "iterative-telemetry==0.0.8",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.5",
    "jmespath==1.0.1",
    "joblib==1.4.2",
    "kiwisolver==1.4.7",
    "kombu==5.4.2",
    "Mako==1.3.8",
    "Markdown==3.7",
    "MarkupSafe==3.0.2",
    "marshmallow==3.24.1",
    "matplotlib==3.9.3",
    "mlflow==2.18.0",
    "mlflow-skinny==2.18.0",
    "multidict==6.1.0",
    "mypy-extensions==1.0.0",
    "networkx==3.4.2",
    "nltk==3.9.1",
    "numpy==2.2.1",
    "omegaconf==2.3.0",
    "opentelemetry-api==1.29.0",
    "opentelemetry-sdk==1.29.0",
    "opentelemetry-semantic-conventions==0.50b0",
    "orjson==3.10.12",
    "packaging==24.2",
    "pandas==2.2.3",
    "pathspec==0.12.1",
    "pathvalidate==3.2.1",
    "pillow==11.0.0",
    "platformdirs==4.3.6",
    "prometheus_client>=0.21.0",
    "prompt_toolkit==3.0.48",
    "protobuf==5.29.2",
    "psutil==6.1.0",
    "pyarrow==18.1.0",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.1",
    "pycparser==2.22",
    "pydantic==2.10.3",
    "pydantic_core==2.27.1",
    "pydot==3.0.2",
    "pygit2==1.16.0",
    "Pygments==2.18.0",
    "pygtrie==2.5.0",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "PyYAML==6.0.2",
    "querystring-parser==1.2.4",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rfc3986==2.0.0",
    "rich==13.9.4",
    "rsa==4.9",
    "ruamel.yaml==0.18.6",
    "ruamel.yaml.clib==0.2.12",
    "s3fs==2024.10.0",
    "s3transfer==0.10.4",
    "scikit-learn==1.6.0",
    "scipy==1.15.1",
    "scmrepo==3.3.11",
    "semver==3.0.2",
    "setuptools>=75.0.0",
    "shellingham==1.5.4",
    "shortuuid==1.0.13",
    "shtab==1.7.1",
    "six==1.17.0",
    "smmap==5.0.1",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.36",
    "sqlparse==0.5.3",
    "sqltrie==0.11.0",
    "tabulate==0.9.0",
    "tenacity==9.0.0",
    "threadpoolctl==3.5.0",
    "tomlkit==0.13.2",
    "tqdm==4.67.1",
    "treelib==1.7.0",
    "typer==0.15.1",
    "typing-inspect==0.9.0",
    "typing_extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "vine==5.1.0",
    "voluptuous==0.15.2",
    "waitress==3.0.2",
    "wcwidth==0.2.13",
    "Werkzeug==3.1.3",
    "wrapt==1.17.0",
    "yarl==1.18.3",
    "zc.lockfile==3.0.post1",
    "zipp==3.21.0",
]

[tool.setuptools]
packages = {find = {}}
