[project]
name = "src"
version = "0.1.0"
description = "mlops capstone project"
authors = [{name = "Gaurav Chauhan"}]
requires-python = ">=3.11"

dependencies = [

    # -------- API / Service --------
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # -------- ML Stack --------
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",

    # -------- MLOps --------
    "mlflow==2.18.0",
    "dvc[s3]==3.55.2",
    "dagshub==0.3.34",
    "dacite~=1.6.0",   # IMPORTANT: dagshub compatible

    # -------- AWS --------
    "boto3>=1.35.0",

    # -------- Metrics --------
    "prometheus_client>=0.21.0",

    # -------- Config / Utilities --------
    "pydantic>=2.10.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.1",

    # -------- Async HTTP (used by dagshub/mlflow) --------
    "httpx>=0.23.0",
]